--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "gatsby-starter-mate",
+  "name": "portfolio",
   "version": "2.2.0",
-  "description": "Gatsby v2 starter to create a top notch portfolio!",
+  "description": "Gatsby portfolio!",
   "main": "index.js",
+  "homepage": "https://github.com/EmaSuriano/gatsby-starter-mate#readme",
   "scripts": {
     "build": "cleandir ./.cache && gatsby build",
     "develop": "cleandir ./.cache && gatsby develop",
     "start": "npm run develop",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint ./src",
     "setup": "node ./bin/setup.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EmaSuriano/gatsby-starter-mate.git"
   },
   "keywords": [
     "gatsby",
@@ -21,12 +20,11 @@
     "PWA",
     "portfolio"
   ],
-  "author": "Ema Suriano",
+  "author": "William VanDolah",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/EmaSuriano/gatsby-starter-mate/issues"
   },
-  "homepage": "https://github.com/EmaSuriano/gatsby-starter-mate#readme",
   "dependencies": {
     "clean-dir": "^1.0.3",
     "contentful": "^7.0.3",
@@ -66,8 +64,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.12.3",
+    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.0"
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.16.1"
   },
   "husky": {
     "hooks": {
