--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "gatsby-transformer-remark": "^2.1.3",
     "inquirer": "^6.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-fontawesome": "^1.6.1",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
@@ -49,9 +49,10 @@
     "react-text-loop": "^2.0.1",
     "react-tippy": "^1.2.2",
     "rebass": "^3.0.0",
-    "styled-components": "^4.0.2"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "chalk": "^2.4.1",
     "contentful-import": "^7.4.0",
     "eslint": "^5.6.0",
