--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ node_js:
   - 10
 
 install:
+  - yarn global add travis-ci-cloudfront-invalidation
   - yarn
 
 script:
@@ -26,3 +27,6 @@ deploy:
   skip_cleanup: true
   acl: public_read
   local_dir: public
+
+after_deploy:
+  - travis-ci-cloudfront-invalidation -a $AWS_ACCESS_KEY -s $AWS_SECRET_KEY -c $AWS_CLOUDFRONT_DIST_ID -i '/*' -b $TRAVIS_BRANCH -p $TRAVIS_PULL_REQUEST
