--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.16.1"
+    "prettier": "^1.16.1",
+    "travis-ci-cloudfront-invalidation": "^1.1.0"
   },
   "husky": {
     "hooks": {
