--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "cleandir ./.cache && gatsby build",
     "develop": "cleandir ./.cache && gatsby develop",
-    "start": "npm run develop",
-    "predeploy": "npm run build --prefix-paths",
-    "deploy": "gh-pages -d public",
+    "start": "yarn run develop",
+    "predeploy": "yarn run build --prefix-paths",
     "lint": "eslint ./src",
     "setup": "node ./bin/setup.js"
   },
@@ -61,7 +60,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.12.3",
-    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.16.1",
